Bug 915783 - [B2G][Browser][PDF]Graphical fragmentation occurs when viewing a pdf via browser. r=jgilbert